added the npm-run-template

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <h1 id="heading">Welcome to npm-pear-template by Rohan Chaudhary.</h1>
   <p id="para">Imagine publishing your app on npm and running it to on any system, just by running the command you provided in package.json to run gui.js</p>
   <div id="social--links">
-  <a href="https://github.com/Codesamp-Rohan">GitHub</a>
+  <a href="https://github.com/Codesamp-Rohan/npm-pear-template">GitHub</a>
   <a href="https://www.linkedin.com/in/rohan-chaudhary-399742255/">LinkedIn</a>
   </div>
   </div>
